# M5-Timer-Cam

./: .gitignore  CLAUDE.md  README.md
docs/: README.md  architecture.md  development.md  firmware.md  hardware.md  server.md  setup.md  web-ui.md
docs/firmware/: README.md  components.md  configuration.md  http-api.md  lifecycle.md  partitions.md
docs/server/: README.md  database.md  http-api.md
docs/superpowers/plans/: 2026-06-02-bm8563-periodic-wake-fix.md  2026-06-02-documentation-structure.md  2026-06-02-macos-controller-adopt-external-server.md  2026-06-02-web-ui-device-power-off.md
docs/superpowers/specs/: 2026-06-02-anchored-capture-schedule-rtc-sync-design.md  2026-06-02-bm8563-periodic-wake-fix-design.md  2026-06-02-calibrated-battery-voltage-readings-design.md  2026-06-02-documentation-structure-design.md  2026-06-02-m5-timercam-setup-design.md  (+4 more)
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/led/: led.c  (+1 more)
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
macos/: .gitignore
macos/M5TimerCamController/: Package.swift
scripts/: flash.sh  monitor.sh  setup.sh  test_camera.sh
server/: .env.example  pyproject.toml
server/app/: config.py  main.py
server/app/api/: camera.py  frames.py  ota.py  snapshot.py  ws.py
server/app/camera/: client.py
server/app/storage/: config_store.py  db.py  hardware_store.py  models.py  power_state.py  repository.py
server/tests/: conftest.py  test_camera_api.py  test_frames_api.py  test_snapshot_api.py  test_storage.py
web/: index.html
web/static/: app.js  style.css
(+25 files in other folders)
