[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m5-timercam-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlmodel>=0.0.21",
    "aiofiles>=24.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
